lesson7/url-shortener/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
spec:
  ingressClassName: traefik
  rules:
    - host: short.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: url-api-service
                port:
                  number: 3000
          - path: /r
            pathType: Prefix
            backend:
              service:
                name: url-api-service
                port:
                  number: 3000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: url-api-service
                port:
                  number: 3000
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: url-api-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-frontend-service
                port:
                  number: 80
